--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Build and Push Image for ruby 3.0.1
+name: Build and Push Image for ruby-3.0.1-python-3.8.10
 
 on:
   push:
     branches:
-      - ruby-3.0.1
+      - ruby-3.0.1-python-3.8.10
 
 jobs:
   build:
@@ -11,9 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build Docker Image
-      run: docker build -t docker.pkg.github.com/$GITHUB_REPOSITORY/ruby3.0.1-alpine-mysql .
+      run: docker build -t docker.pkg.github.com/$GITHUB_REPOSITORY/ruby3.0.1-alpine-mysql-python-web3 .
 
     - name: Login to Github Registry
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{secrets.GIT_USER_NAME}} --password-stdin
     - name: Pushing docker Image to github docker registry
-      run: docker push docker.pkg.github.com/$GITHUB_REPOSITORY/ruby3.0.1-alpine-mysql
+      run: docker push docker.pkg.github.com/$GITHUB_REPOSITORY/ruby3.0.1-alpine-mysql-python-web3
